# serializer version: 1
# name: test_device_registry[1299453]
  DeviceRegistryEntrySnapshot({
    'area_id': None,
    'config_entries': <ANY>,
    'config_entries_subentries': <ANY>,
    'configuration_url': None,
    'connections': set({
    }),
    'disabled_by': None,
    'entry_type': None,
    'hw_version': None,
    'id': <ANY>,
    'identifiers': set({
      tuple(
        'surepetcare',
        '1299453',
      ),
    }),
    'labels': set({
    }),
    'manufacturer': 'SurePetCare',
    'model': 'DUAL_SCAN_CONNECT',
    'model_id': 6,
    'name': 'Katzenklappe',
    'name_by_user': None,
    'primary_config_entry': <ANY>,
    'serial_number': None,
    'sw_version': None,
    'via_device_id': None,
  })
# ---
# name: test_device_registry[222222]
  DeviceRegistryEntrySnapshot({
    'area_id': None,
    'config_entries': <ANY>,
    'config_entries_subentries': <ANY>,
    'configuration_url': None,
    'connections': set({
    }),
    'disabled_by': None,
    'entry_type': None,
    'hw_version': None,
    'id': <ANY>,
    'identifiers': set({
      tuple(
        'surepetcare',
        '222222',
      ),
    }),
    'labels': set({
    }),
    'manufacturer': 'SurePetCare',
    'model': 'PET',
    'model_id': 0,
    'name': 'Pet with empty status',
    'name_by_user': None,
    'primary_config_entry': <ANY>,
    'serial_number': None,
    'sw_version': None,
    'via_device_id': None,
  })
# ---
# name: test_device_registry[269654]
  DeviceRegistryEntrySnapshot({
    'area_id': None,
    'config_entries': <ANY>,
    'config_entries_subentries': <ANY>,
    'configuration_url': None,
    'connections': set({
    }),
    'disabled_by': None,
    'entry_type': None,
    'hw_version': None,
    'id': <ANY>,
    'identifiers': set({
      tuple(
        'surepetcare',
        '269654',
      ),
    }),
    'labels': set({
    }),
    'manufacturer': 'SurePetCare',
    'model': 'FEEDER_CONNECT',
    'model_id': 4,
    'name': 'Maui matlåda (old) ',
    'name_by_user': None,
    'primary_config_entry': <ANY>,
    'serial_number': None,
    'sw_version': None,
    'via_device_id': <ANY>,
  })
# ---
# name: test_device_registry[295972]
  DeviceRegistryEntrySnapshot({
    'area_id': None,
    'config_entries': <ANY>,
    'config_entries_subentries': <ANY>,
    'configuration_url': None,
    'connections': set({
    }),
    'disabled_by': None,
    'entry_type': None,
    'hw_version': None,
    'id': <ANY>,
    'identifiers': set({
      tuple(
        'surepetcare',
        '295972',
      ),
    }),
    'labels': set({
    }),
    'manufacturer': 'SurePetCare',
    'model': 'HUB',
    'model_id': 1,
    'name': 'Hem-hub',
    'name_by_user': None,
    'primary_config_entry': <ANY>,
    'serial_number': None,
    'sw_version': None,
    'via_device_id': None,
  })
# ---
# name: test_device_registry[472721]
  DeviceRegistryEntrySnapshot({
    'area_id': None,
    'config_entries': <ANY>,
    'config_entries_subentries': <ANY>,
    'configuration_url': None,
    'connections': set({
    }),
    'disabled_by': None,
    'entry_type': None,
    'hw_version': None,
    'id': <ANY>,
    'identifiers': set({
      tuple(
        'surepetcare',
        '472721',
      ),
    }),
    'labels': set({
    }),
    'manufacturer': 'SurePetCare',
    'model': 'PET',
    'model_id': 0,
    'name': 'Maui',
    'name_by_user': None,
    'primary_config_entry': <ANY>,
    'serial_number': None,
    'sw_version': None,
    'via_device_id': None,
  })
# ---
# name: test_device_registry[727608]
  DeviceRegistryEntrySnapshot({
    'area_id': None,
    'config_entries': <ANY>,
    'config_entries_subentries': <ANY>,
    'configuration_url': None,
    'connections': set({
    }),
    'disabled_by': None,
    'entry_type': None,
    'hw_version': None,
    'id': <ANY>,
    'identifiers': set({
      tuple(
        'surepetcare',
        '727608',
      ),
    }),
    'labels': set({
    }),
    'manufacturer': 'SurePetCare',
    'model': 'PET_DOOR',
    'model_id': 3,
    'name': 'Laundry Door',
    'name_by_user': None,
    'primary_config_entry': <ANY>,
    'serial_number': None,
    'sw_version': None,
    'via_device_id': None,
  })
# ---
# name: test_device_registry[734730]
  DeviceRegistryEntrySnapshot({
    'area_id': None,
    'config_entries': <ANY>,
    'config_entries_subentries': <ANY>,
    'configuration_url': None,
    'connections': set({
    }),
    'disabled_by': None,
    'entry_type': None,
    'hw_version': None,
    'id': <ANY>,
    'identifiers': set({
      tuple(
        'surepetcare',
        '734730',
      ),
    }),
    'labels': set({
    }),
    'manufacturer': 'SurePetCare',
    'model': 'POSEIDON_CONNECT',
    'model_id': 8,
    'name': 'Poseidon connect',
    'name_by_user': None,
    'primary_config_entry': <ANY>,
    'serial_number': None,
    'sw_version': None,
    'via_device_id': None,
  })
# ---
